[gd_scene load_steps=17 format=3 uid="uid://djjdol3745yya"]

[ext_resource type="Texture2D" uid="uid://c8bm3lwn12upg" path="res://assets/Rhys Carter/portrait.png" id="1_7dq2r"]
[ext_resource type="Script" path="res://npcjunk/npctell.gd" id="2_x7diu"]
[ext_resource type="Texture2D" uid="uid://bs8suaku7nslc" path="res://assets/ui/rhystalk.png" id="3_o2flp"]
[ext_resource type="Script" path="res://npcjunk/buttonlogic.gd" id="4_t3dg8"]
[ext_resource type="Theme" uid="uid://4jfvrp250vkg" path="res://npcjunk/font.tres" id="4_uo28f"]
[ext_resource type="Script" path="res://topdown2d/cabinconvologic.gd" id="5_nonqv"]
[ext_resource type="FontFile" uid="uid://mddb1p3dv04g" path="res://assets/ui/font.ttf" id="6_kwvbj"]

[sub_resource type="Animation" id="Animation_wwhgu"]
resource_name = "0"

[sub_resource type="Animation" id="Animation_emj8e"]
resource_name = "1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, 72)]
}

[sub_resource type="Animation" id="Animation_1h3uf"]
resource_name = "2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, 80)]
}

[sub_resource type="Animation" id="Animation_wdli5"]
resource_name = "3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, 90)]
}

[sub_resource type="Animation" id="Animation_jck8d"]
resource_name = "4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, 98)]
}

[sub_resource type="Animation" id="Animation_csgc1"]
resource_name = "5"

[sub_resource type="Animation" id="Animation_apb00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(131, 72)]
}

[sub_resource type="Animation" id="Animation_65edu"]
resource_name = "options"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6e12"]
_data = {
"0": SubResource("Animation_wwhgu"),
"1": SubResource("Animation_emj8e"),
"2": SubResource("Animation_1h3uf"),
"3": SubResource("Animation_wdli5"),
"4": SubResource("Animation_jck8d"),
"5": SubResource("Animation_csgc1"),
"RESET": SubResource("Animation_apb00"),
"options": SubResource("Animation_65edu")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = 176.0
offset_right = 140.0
offset_bottom = 216.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -3.0
offset_right = 3372.0
offset_bottom = 3284.0
scale = Vector2(0.0225174, 0.0219153)
texture = ExtResource("1_7dq2r")
stretch_mode = 4
script = ExtResource("2_x7diu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = 64.0
offset_right = 52.0
offset_bottom = 104.0
scale = Vector2(1.89364, 1.07267)
texture = ExtResource("3_o2flp")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 63.3699
offset_top = 4.66129
offset_right = 492.37
offset_bottom = 775.661
scale = Vector2(0.0267831, 0.044504)
script = ExtResource("4_t3dg8")

[node name="Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_uo28f")
text = "BLANK"

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_uo28f")
text = "BLANK"

[node name="Button3" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_uo28f")
text = "BLANK"

[node name="Button4" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_uo28f")
text = "BLANK"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -2.0
offset_top = 71.0
offset_right = 303.0
offset_bottom = 134.0
scale = Vector2(0.328875, 0.491242)
theme = ExtResource("4_uo28f")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_kwvbj")
fit_content = true
script = ExtResource("5_nonqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i6e12")
}

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 72.0
offset_right = 135.0
offset_bottom = 76.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3

[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="ColorRect/VBoxContainer" method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button" to="RichTextLabel" method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button2" to="ColorRect/VBoxContainer" method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button2" to="RichTextLabel" method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button3" to="ColorRect/VBoxContainer" method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button3" to="RichTextLabel" method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button4" to="ColorRect/VBoxContainer" method="_on_button_4_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Button4" to="RichTextLabel" method="_on_button_4_pressed"]
